fix: branch name
Signed-off-by: Adam Shannag <shannagadam11@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build & Verify Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths-ignore:
       - "**.md"
       - ".gitignore"
