--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,12 +31,12 @@ archives:
       {{- .ProjectName }}_{{- .Version }}_{{- title .Os }}_{{- if eq .Arch "amd64" }}x86_64{{- else if eq .Arch "386" }}i386{{- else }}{{ .Arch }}{{ end }}{{- if .Arm }}v{{ .Arm }}{{ end -}}
     format_overrides:
       - goos: windows
-        format: zip
+        formats: [ zip]
     builds_info:
       group: root
       owner: root
     files:
-      - README.md
+      - README.MD
 
 checksum:
   name_template: 'checksums.txt'
